[metadata]
name = importmem 
version = 0.1.0
author = Oleg Bulatov
author_email = oleg@bulatov.me
description = Profile how much memory is used by package imports
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dmage/importmem
project_urls =
    Bug Tracker = https://github.com/dmage/importmem/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    importmem = importmem.cli:main

[options.packages.find]
where = src
